--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "jest": "^29.2.2",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.1"
